--- a/LVL2/Task2/TributePage.css
+++ b/LVL2/Task2/TributePage.css
@@ -3,6 +3,8 @@
     justify-content: space-between;
     padding-left: 30px;
     padding-right: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
     background-color: #D2042D;
     color: whitesmoke;
     font-size: large;
@@ -12,15 +14,17 @@
     text-align: justify;
     padding: 100px;
     display: flex;
+    justify-content: center;
     align-items: center;
     background-image: url('./luffy.png');
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     border: none;
     font-size: large;
     line-height: 1.6;
     font-weight: 500;
-
+    /* text-shadow: 0 0 3px #FF0000; */
 }
 
 #mainP {
@@ -45,4 +49,9 @@
     text-align: center;
     font-size: x-large;
     margin-bottom: 5px;
+}
+
+#no-bg {
+    height: 269px;
+    width: 200px;
 }
